--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "js-cookies": "^1.0.4",
     "js.cookie": "^0.0.4",
     "next": "10.0.7",
+    "next-cookies": "^2.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
